fixed z-index video

--- a/src/app/containers/Ataraxia/containers/Main/main.css
+++ b/src/app/containers/Ataraxia/containers/Main/main.css
@@ -24,7 +24,6 @@
         left: 50%;
         min-height: 100%;
         min-width: 100%;
-        z-index: -100;
         -webkit-transform: translateX(-50%) translateY(-50%);
         transform: translateX(-50%) translateY(-50%);
     }
